2002-11-25  Michael Meeks  <michael@ximian.com>

	* Version 2.1.1

2002-11-22  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c (class_init): upd.
	(impl_bonobo_ui_sync_menu_wrap_widget): impl.

	* bonobo/bonobo-ui-engine.c
	(bonobo_ui_engine_widget_set): use the synchronizer.

	* bonobo/bonobo-ui-sync-toolbar.c (class_init): upd.
	(impl_bonobo_ui_sync_toolbar_wrap_widget): impl.

	* bonobo/bonobo-ui-sync.c
	(bonobo_ui_sync_wrap_widget): impl.

	* tests/test-ui.c (main): insert a menu widget.

2002-11-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-file-selector-util.c
	(create_bonobo_selector): fix acute brokenness,
	thanks to NotZed.

2002-11-20  hhetter@suse.de

	* bonobo/bonobo-ui-component.c (ui_event),
	(impl_Bonobo_UIComponent_execVerb): 64bit safe
	va-list termination.

2002-11-18  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (cb_do_popup): don't destroy
	popup immediately after popup ;-)

2002-11-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_set_translate): don't
	segv later if we have a NULL / bogus xml
	string coming in.

2002-11-10  Ole Laursen  <olau@hardworking.dk>

	* configure.in: Added da to ALL_LINGUAS.

2002-11-09  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-11-06  Stanislav Brabec  <sbrabec@suse.cz>

	* samples/controls/Makefile.am,
	samples/compound-doc/bonobo-hello/Makefile.am:
	Fix $(prefix)/lib -> $(libdir).

2002-11-05  Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>

	* bonobo/bonobo-ui-init-gtk.c: Change POPT_ARG_STRING to
	POPT_ARG_INT for the screen argument

2002-11-04  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-ui-util.c:
	(bonobo_ui_util_xml_get_icon_size): impl reading a named
	icon size from a node's "icon_size" attribute.
	(bonobo_ui_util_xml_set_image): use this icon size.

2002-11-04  Michael Meeks  <michael@ximian.com>

	* samples/controls/bonobo-sample-controls.c